# hermes-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/hermes_cli/: __init__.py  api.py  chat.py  main.py  schema.py  tools.py  utils.py
src/hermes_cli/builtin_tools/: __init__.py  file.py  math.py  search.py  shell.py
tests/: __init__.py  test_api.py  test_chat.py  test_main.py  test_schema.py  test_tools.py  test_utils.py
