[project]
name = "hermes-cli"
version = "0.1.0"
description = "A Python CLI tool for interfacing with Nous Research's Hermes-4 models"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "google-search-results>=2.4.2",
]

[project.scripts]
hermes = "hermes_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src"]
